--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -267,6 +267,11 @@ h6,
   margin: 1em 0 0.5em;
 }
 
+h1,
+.h1 {
+  margin-top: 0px;
+}
+
 .social-icons {
     padding: 1.5em 0 0 0;
     font-size: 1.75rem;
